--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon api/index.js",
-    "start": "nodemon api/index.js"
+    "start": "nodemon api/index.js",
+    "build": "npm install && npm install --prefix client && npm run build --prefix client"
+    
+    
   },
   "repository": {
     "type": "git",
@@ -25,8 +28,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
     "nodemon": "^3.0.1"
-
   }
 }
